--- a/Areas/AdminHotels/Views/Services/Details.cshtml
+++ b/Areas/AdminHotels/Views/Services/Details.cshtml
@@ -5,34 +5,59 @@
     Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1 style="color: #197fca;">Chi Tiết Dịch Vụ</h1>
+<style>
+    .btn-primary {
+        background-color: #197fca;
+        border-color: #197fca;
+        color: white;
+    }
 
-<div>
-    <h4 style="color: #197fca;">Dịch Vụ</h4>
-    <hr />
+        .btn-primary:hover {
+            background-color: #1565c0;
+            border-color: #1565c0;
+        }
+
+    .btn-secondary {
+        background-color: #ed3d34;
+        border-color: #ed3d34;
+        color: white;
+    }
+
+        .btn-secondary:hover {
+            background-color: #d1342b;
+            border-color: #d1342b;
+        }
+
+    .text-primary {
+        color: #197fca !important;
+    }
+
+    .text-danger {
+        color: #ed3d34 !important;
+    }
+</style>
+
+<div class="container mt-4">
+    <h1 class="text-primary mb-4"><i class="fas fa-info-circle"></i> Chi Tiết Dịch Vụ</h1>
+
+    <h4 class="text-primary mb-3"><i class="fas fa-concierge-bell"></i> Dịch Vụ</h4>
+    <hr style="border-color: #197fca; margin-bottom: 25px;" />
+
     <dl class="row">
-        <dt class="col-sm-2" style="color: #197fca;">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10" style="color: #333;">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2" style="color: #197fca;">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10" style="color: #333;">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2" style="color: #197fca;">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class="col-sm-10" style="color: #333;">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+        <dt class="col-sm-2 text-primary"><i class="fas fa-signature"></i> @Html.DisplayNameFor(model => model.Name)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
+        <dt class="col-sm-2 text-primary"><i class="fas fa-file-alt"></i> @Html.DisplayNameFor(model => model.Description)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Description)</dd>
+        <dt class="col-sm-2 text-primary"><i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.Price)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
     </dl>
+
+    <div class="mt-4">
+        <a asp-action="Edit" asp-route-id="@Model?.ServiceId" class="btn btn-primary"><i class="fas fa-edit"></i> Chỉnh Sửa</a>
+        <a asp-action="Index" class="btn btn-secondary ml-2"><i class="fas fa-arrow-left"></i> Quay lại danh sách</a>
+    </div>
 </div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ServiceId" class="btn btn-primary" style="background-color: #197fca; border-color: #197fca; color: white;">Chỉnh Sửa</a>
-    <a asp-action="Index" class="btn btn-secondary" style="background-color: #ec4e45; border-color: #ec4e45; color: white;">Quay lại danh sách</a>
-</div>
+@section Scripts {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+}
