--- a/Areas/AdminHotels/Views/Bookings/Delete.cshtml
+++ b/Areas/AdminHotels/Views/Bookings/Delete.cshtml
@@ -1,57 +1,79 @@
 ﻿@model HotelManagement.Models.Booking
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa Đặt Phòng";
+    Layout = "~/Areas/AdminHotels/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<style>
+    .btn-danger {
+        background-color: #ed3d34;
+        border-color: #ed3d34;
+        color: white;
+    }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Booking</h4>
-    <hr />
+        .btn-danger:hover {
+            background-color: #d1342b;
+            border-color: #d1342b;
+        }
+
+    .btn-secondary {
+        background-color: #197fca;
+        border-color: #197fca;
+        color: white;
+    }
+
+        .btn-secondary:hover {
+            background-color: #1565c0;
+            border-color: #1565c0;
+        }
+
+    .text-primary {
+        color: #197fca !important;
+    }
+
+    .text-danger {
+        color: #ed3d34 !important;
+    }
+</style>
+
+<div class="container mt-4">
+    <h1 class="text-primary mb-4"><i class="fas fa-trash-alt"></i> Xóa Đặt Phòng</h1>
+
+    <div class="alert alert-danger" role="alert">
+        <h3 class="mb-0"><i class="fas fa-exclamation-triangle"></i> Bạn có chắc chắn muốn xóa đặt phòng này không?</h3>
+    </div>
+
+    <h4 class="text-primary mb-3"><i class="fas fa-calendar-check"></i> Thông Tin Đặt Phòng</h4>
+    <hr style="border-color: #197fca; margin-bottom: 25px;" />
+
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckInDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckInDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckOutDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckOutDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Room)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Room.RoomId)
-        </dd>
+        <dt class="col-sm-2 text-primary"><i class="fas fa-calendar-day"></i> @Html.DisplayNameFor(model => model.CheckInDate)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.CheckInDate)</dd>
+
+        <dt class="col-sm-2 text-primary"><i class="fas fa-calendar-day"></i> @Html.DisplayNameFor(model => model.CheckOutDate)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.CheckOutDate)</dd>
+
+        <dt class="col-sm-2 text-primary"><i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.TotalPrice)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.TotalPrice)</dd>
+
+        <dt class="col-sm-2 text-primary"><i class="fas fa-tasks"></i> @Html.DisplayNameFor(model => model.Status)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Status)</dd>
+
+        <dt class="col-sm-2 text-primary"><i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Customer)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Customer.CustomerId)</dd>
+
+        <dt class="col-sm-2 text-primary"><i class="fas fa-bed"></i> @Html.DisplayNameFor(model => model.Room)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Room.RoomId)</dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" class="mt-4">
         <input type="hidden" asp-for="BookingId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary ml-2"><i class="fas fa-arrow-left"></i> Quay lại danh sách</a>
     </form>
 </div>
+
+@section Scripts {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+}
