--- a/Views/Services/Details.cshtml
+++ b/Views/Services/Details.cshtml
@@ -1,37 +1,53 @@
 ﻿@model HotelManagement.Models.Service
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết dịch vụ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1 class="text-center my-4 text-uppercase" style="color: #ed3d34; font-weight: bold;">
+    <i class="fas fa-concierge-bell"></i> Chi Tiết Dịch Vụ
+</h1>
 
-<div>
-    <h4>Service</h4>
+<div class="card shadow-lg p-4">
+    <h4 class="text-primary"><i class="fas fa-info-circle"></i> Thông tin dịch vụ</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+        <dt class="col-sm-3">Tên dịch vụ:</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.Name)</dd>
+
+        <dt class="col-sm-3">Mô tả:</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.Description)</dd>
+
+        <dt class="col-sm-3">Giá:</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.Price) VND</dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ServiceId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="mt-4">
+    <a onclick="window.history.back()" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Quay lại danh sách</a>
 </div>
+
+<style>
+    .card {
+        background-color: #f8f9fa;
+        border-radius: 10px;
+    }
+
+    dt {
+        font-weight: bold;
+    }
+
+    dd {
+        font-size: 16px;
+    }
+
+    .btn-warning {
+        background-color: #ed3d34;
+        border: none;
+    }
+
+        .btn-warning:hover {
+            background-color: #c32f2a;
+        }
+</style>
